<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edt_codigo"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/codigoProducto"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/edt_descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_descripcion"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/DescripcionProducto"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/edt_precio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_codigo" />

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="299dp"
        android:layout_height="51dp"
        android:hint="@string/RegistrarProducto"
        android:onClick="Registrar"
        android:text="@string/RegistrarProducto"
        app:layout_constraintBottom_toTopOf="@+id/btn_buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_precio" />

    <Button
        android:id="@+id/btn_buscar"
        android:layout_width="296dp"
        android:layout_height="51dp"
        android:hint="@string/BuscarProducto"
        android:onClick="Buscar"
        android:text="@string/BuscarProducto"
        app:layout_constraintBottom_toTopOf="@+id/btn_modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_registrar" />

    <Button
        android:id="@+id/btn_modificar"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:hint="@string/ModificarProducto"
        android:text="@string/ModificarProducto"
        app:layout_constraintBottom_toTopOf="@+id/btn_eliminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_buscar" />

    <Button
        android:id="@+id/btn_eliminar"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:hint="@string/EliminarProducto"
        android:text="@string/EliminarProducto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_modificar" />

    <EditText
        android:id="@+id/edt_precio"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/PrecioProducto"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_descripcion" />
</androidx.constraintlayout.widget.ConstraintLayout>